--- a/packages/client-ui/assets/css/root.css
+++ b/packages/client-ui/assets/css/root.css
@@ -27,6 +27,15 @@ b, strong {
 /*
 Generics
  */
+
+.pr-1 {
+    padding-right: 0.25rem !important
+}
+
+.pr-2 {
+    padding-right: 0.5rem !important
+}
+
 .m-b-0 {
     margin-bottom: 0px;
 }
